# cinder

./: .env.example  .gitignore  CASE_STUDY.md  Cargo.toml  README.md  alchemy.run.ts  harness.ts  package.json  plan.ts  tsconfig.json
crates/cinder-agent/: Cargo.toml
crates/cinder-agent/src/: main.rs
crates/cinder-cache/: Cargo.toml  wrangler.jsonc
crates/cinder-cache/src/: lib.rs
crates/cinder-cli/: Cargo.toml
crates/cinder-cli/src/: main.rs
crates/cinder-orchestrator/: Cargo.toml  wrangler.jsonc
crates/cinder-orchestrator/src/: build.rs  cache.rs  job_queue_do.rs  jobs.rs  lib.rs  repos.rs  runner_pool_do.rs  runners.rs  webhook.rs
examples/: README.md  env.example  run-demo.ts
scripts/: finalize-loop.ts
