[package]
name = "cinder-agent"
version.workspace = true
edition.workspace = true

[[bin]]
name = "cinder-agent"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = "0.3"
sha2 = "0.10"
hex = "0.4"
anyhow = "1"
