[package]
name = "cinder-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "cinder"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
tokio = { version = "1", features = ["full"] }
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
