[package]
name = "cinder-orchestrator"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version = "0.5", features = ["http"] }
wasm-bindgen = "0.2.114"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"
hmac = "0.12"
sha2 = "0.10"
